--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,20 +21,17 @@ jobs:
       - name: Install Tools
         run: |
           sudo apt-get install wget build-essential python3
-          echo AAAAAAAAAAAA1
+          python3 -m venv env
+          source env/bin/activate
           pip3 install --upgrade pip
-          echo AAAAAAAAAAAA2
           pip3 install setuptools
-          echo AAAAAAAAAAAA3
           pip3 install requests
-          echo AAAAAAAAAAAA4
-          # Remove bundled migen from YosysHQ/setup-oss-cad-suite
-          pip3 uninstall migen
-          echo AAAAAAAAAAAA5
-      # Install (n)Migen / LiteX / Cores
+
+      # Install LiteX + toolchains
       - name: Install LiteX
         run: |
           wget https://raw.githubusercontent.com/enjoy-digital/litex/master/litex_setup.py
+          source env/bin/activate
           python3 litex_setup.py --config=full --init --install --user
           python3 litex_setup.py --gcc=riscv
           ls $PWD/../riscv64-*/bin/
@@ -45,6 +42,7 @@ jobs:
       - name: Build bitstream and bios
         run: |
           export PATH=$PATH:$(echo $PWD/../riscv64-*/bin/)
+          source env/bin/activate
           ls $PWD/../riscv64-*/bin/
           riscv64-unknown-elf-gcc --version
           make bitstream
@@ -53,4 +51,5 @@ jobs:
       - name: Build app
         run: |
           export PATH=$PATH:$(echo $PWD/../riscv64-*/bin/)
+          source env/bin/activate
           make app
