--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install Tools
         run: |
           sudo apt-get install wget build-essential python3
+          pip3 install virtualenv
           python3 -m venv env
           source env/bin/activate
           pip3 install --upgrade pip
