--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,32 +17,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Install Tools
-      - name: Install Tools
-        run: |
-          sudo apt-get install wget build-essential python3
-          echo AAAA1
-          pip3 install virtualenv
-          echo AAAA1.5
-          pip3 install --upgrade pip
-          echo AAAA2
-          python3 -m virtualenv env
-          echo AAAA3
-          source env/bin/activate
-          echo AAAA4
-          pip3 install --upgrade pip
-          echo AAAA5
-          pip3 install setuptools
-          echo AAAA6
-          pip3 install requests
-          echo AAAA7
-
-      # Install LiteX + toolchains
+      # Install LiteX
       - name: Install LiteX
         run: |
+          mkdir -p litex
+          cd litex
           wget https://raw.githubusercontent.com/enjoy-digital/litex/master/litex_setup.py
-          source env/bin/activate
-          python3 litex_setup.py --config=full --init --install --user
+          python3 litex_setup.py init
+          python3 litex_setup.py install
+
+      - name: Install Toolchain
+        run: |
+          #python3 litex_setup.py --config=full --init --install --user
+          cd litex
           python3 litex_setup.py --gcc=riscv
           ls $PWD/../riscv64-*/bin/
           export PATH=$PATH:$(echo $PWD/../riscv64-*/bin/)
@@ -52,7 +39,6 @@ jobs:
       - name: Build bitstream and bios
         run: |
           export PATH=$PATH:$(echo $PWD/../riscv64-*/bin/)
-          source env/bin/activate
           ls $PWD/../riscv64-*/bin/
           riscv64-unknown-elf-gcc --version
           make bitstream
@@ -61,5 +47,4 @@ jobs:
       - name: Build app
         run: |
           export PATH=$PATH:$(echo $PWD/../riscv64-*/bin/)
-          source env/bin/activate
           make app
